--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_sv_SE.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_sv_SE.properties
@@ -6,6 +6,9 @@ ForumUIActivity.label.reply=Svara
 ForumUIActivity.label.lastReply=Visa senaste svar
 ForumUIActivity.label.submit=Skicka
 ForumUIActivity.label.view=Visa
+ForumUIActivity.label.noReply=No reply
+ForumUIActivity.label.oneReply={0} reply
+ForumUIActivity.label.replies={0} replies
 ForumUIActivity.msg.reply-success=du har svarat p\u00E5 inl\u00E4gg: {0}
 ForumUIActivity.msg.reply-empty=Rubrik eller meddelande \u00E4r tomt.
 ForumUIActivity.forum.update-topic-title=Titeln har uppdaterats till: {0}
