--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_tr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_tr.properties
@@ -1,59 +1,62 @@
-ForumUIActivity.label.add-post={0} has added a new post: {1}
-ForumUIActivity.label.update-post={0} has updated a post: {1}
-ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
-ForumUIActivity.label.update-topic={0} has updated a topic: {1}
-ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View latest reply
-ForumUIActivity.label.submit=Submit
-ForumUIActivity.label.view=View
-ForumUIActivity.msg.reply-success=you have replied to the post: {0}
-ForumUIActivity.msg.reply-empty=Title or message is empty.
-ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
-ForumUIActivity.forum.update-topic-content=Content has been edited.
-ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
-ForumUIActivity.forum.closed-topic=Topic has been closed.
-ForumUIActivity.forum.opened-topic=Topic has been opened.
-ForumUIActivity.forum.locked-topic=Topic has been locked.
-ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
-ForumUIActivity.forum.approved-topic=Topic has been approved.
-ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
-ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
-ForumUIActivity.forum.update-post=Edited his reply to: {0}
-ForumUIActivity.forum.add-poll=A poll has been added to the topic.
-ForumUIActivity.forum.update-poll=Poll has been updated.
-ForumUIActivity.forum.close-poll=Poll has been closed.
-ForumUIActivity.forum.remove-poll=Poll has been removed.
+ForumUIActivity.label.add-post={0} yeni bir g\u00F6nderi ekledi: {1}
+ForumUIActivity.label.update-post={0} bir g\u00F6nderiyi g\u00FCncelledi: {1}
+ForumUIActivity.label.add-topic={0} yeni bir konu g\u00F6nderdi: {1}
+ForumUIActivity.label.update-topic={0} bir konuyu g\u00FCncelledi: {1}
+ForumUIActivity.label.reply=Yan\u0131tla
+ForumUIActivity.label.lastReply=Son Yan\u0131tlananlar\u0131 G\u00F6ster
+ForumUIActivity.label.submit=G\u00F6nder
+ForumUIActivity.label.view=G\u00F6r\u00FCn\u00FCm
+ForumUIActivity.label.noReply=Cevap Yok
+ForumUIActivity.label.oneReply={0} cevap
+ForumUIActivity.label.replies={0} cevap
+ForumUIActivity.msg.reply-success=g\u00F6nderiyi yan\u0131tlad\u0131n\u0131z: {0}
+ForumUIActivity.msg.reply-empty=Ba\u015Fl\u0131k ya da mesaj bo\u015F.
+ForumUIActivity.forum.update-topic-title=Ba\u015Fl\u0131k g\u00FCncellendi: {0}
+ForumUIActivity.forum.update-topic-content=\u0130\u00E7erik d\u00FCzenlendi.
+ForumUIActivity.forum.update-topic-rate=Konu derecesi: {0}
+ForumUIActivity.forum.closed-topic=Konu kapat\u0131ld\u0131.
+ForumUIActivity.forum.opened-topic=Konu a\u00E7\u0131ld\u0131.
+ForumUIActivity.forum.locked-topic=Konu kilitli.
+ForumUIActivity.forum.unlocked-topic=Konu kilidi kald\u0131r\u0131ld\u0131.
+ForumUIActivity.forum.approved-topic=Konu onayland\u0131.
+ForumUIActivity.forum.unapproved-topic=Konu onay\u0131 kald\u0131r\u0131ld\u0131.
+ForumUIActivity.forum.move-topic=Konu Ta\u015F\u0131nd\u0131: {0} > {1}
+ForumUIActivity.forum.update-post=Cevab\u0131 de\u011Fi\u015Fti: {0}
+ForumUIActivity.forum.add-poll=Bir anket konuya eklenmi\u015Ftir.
+ForumUIActivity.forum.update-poll=Anket g\u00FCncellenmi\u015Ftir.
+ForumUIActivity.forum.close-poll=Anket kapand\u0131.
+ForumUIActivity.forum.remove-poll=Anket kald\u0131r\u0131ld\u0131.
 
-AnswerUIActivity.label.answer-add=Answer has been submitted: {0}
-AnswerUIActivity.label.answer-update-content=Answer has been edited to: {0}
-AnswerUIActivity.label.answer-promoted=Comment {0} has been promoted as an answer
-AnswerUIActivity.label.answer-activated=Answer has been activated: {0}
-AnswerUIActivity.label.answer-unactivated=Answer has been unactivated: {0}
-AnswerUIActivity.label.answer-approved=Answer has been approved: {0}
-AnswerUIActivity.label.answer-disapproved=Answer has been unapproved: {0}
-AnswerUIActivity.label.question-update-title=Title has been updated to: {0}
-AnswerUIActivity.label.question-update-detail=Detail has been updated to: {0}
-AnswerUIActivity.label.question-activated=Question has been activated.
-AnswerUIActivity.label.question-unactivated=Question has been unactivated.
-AnswerUIActivity.label.question-add-language=Question has been added in: {0}
-AnswerUIActivity.label.question-add-attachment=Attachment(s) has been added.
-AnswerUIActivity.label.button.view=View
-AnswerUIActivity.label.noComment=No Comment
-AnswerUIActivity.label.comment={0} Comment
-AnswerUIActivity.label.comments={0} Comments
-AnswerUIActivity.label.noAnswer=No Answer
-AnswerUIActivity.label.answer={0} Answer
-AnswerUIActivity.label.answers={0} Answers
-AnswerUIActivity.label.button.answer=Answer
+AnswerUIActivity.label.answer-add=Yan\u0131t g\u00F6nderildi: {0}
+AnswerUIActivity.label.answer-update-content=Cevap d\u00FCzenlenmi\u015F: {0}
+AnswerUIActivity.label.answer-promoted=Yorum {0} bir yan\u0131t olarak terfi etti
+AnswerUIActivity.label.answer-activated=Cevab\u0131 etkin: {0}
+AnswerUIActivity.label.answer-unactivated=Cevap etkinli\u011Fi kald\u0131r\u0131ld\u0131: {0}
+AnswerUIActivity.label.answer-approved=Cevab\u0131 onaylad\u0131: {0}
+AnswerUIActivity.label.answer-disapproved=Cevap onay\u0131 kald\u0131r\u0131ld\u0131: {0}
+AnswerUIActivity.label.question-update-title=Ba\u015Fl\u0131k g\u00FCncellendi: {0}
+AnswerUIActivity.label.question-update-detail=Ayr\u0131nt\u0131 g\u00FCncellendi: {0}
+AnswerUIActivity.label.question-activated=Soru etkin.
+AnswerUIActivity.label.question-unactivated=Soru etkinli\u011Fi kald\u0131r\u0131ld\u0131.
+AnswerUIActivity.label.question-add-language=Soru eklendi: {0}
+AnswerUIActivity.label.question-add-attachment=Ek(ler) eklendi.
+AnswerUIActivity.label.button.view=G\u00F6r\u00FCn\u00FCm
+AnswerUIActivity.label.noComment=Yorum yok
+AnswerUIActivity.label.comment={0} Yorum
+AnswerUIActivity.label.comments={0} Yorum
+AnswerUIActivity.label.noAnswer=Cevap yok
+AnswerUIActivity.label.answer={0} Cevap
+AnswerUIActivity.label.answers={0} Cevap
+AnswerUIActivity.label.button.answer=Cevap
 
-PollUIActivity.label.update_poll=Poll has been updated.
-PollUIActivity.label.vote={0} vote
-PollUIActivity.label.votes={0} votes
-PollUIActivity.action.vote=Vote
+PollUIActivity.label.update_poll=Anket g\u00FCncellenmi\u015Ftir.
+PollUIActivity.label.vote={0} oy
+PollUIActivity.label.votes={0} oy
+PollUIActivity.action.vote=Oy
 
-ActivityRating.title.rank5=Good
-ActivityRating.title.rank4=Above average
-ActivityRating.title.rank3=Average
-ActivityRating.title.rank2=Below average
-ActivityRating.title.rank1=Poor
-ActivityRating.title.NotRateYet=no value yet
+ActivityRating.title.rank5=\u0130yi
+ActivityRating.title.rank4=Ortalaman\u0131n \u00FCst\u00FCnde
+ActivityRating.title.rank3=Ortalama
+ActivityRating.title.rank2=Ortalaman\u0131n alt\u0131nda
+ActivityRating.title.rank1=Zay\u0131f
+ActivityRating.title.NotRateYet=Hen\u00FCz herhangi bir de\u011Fer yok
