--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_tr.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_tr.properties
@@ -15,16 +15,16 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Select File
-UIComposerDocumentExtension.label.Download=Download
-UIComposerDocumentExtension.label.View_File=View
-UIComposerDocumentExtension.label.Version=Version
-UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupComposer.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
-UIComposer.msg.error.Must_select_file=You have to select file first.
-UIDocActivitySelector.label.cancel=Cancel
-UIDocActivitySelector.label.selectedfile=Select
-UIDSUploadInput.label.Upload=Upload
-UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIActivityComposer.label.UIDocActivityComposer=Dosya
+UIComposerDocumentExtension.label.Select_File=Dosya Se\u00E7in
+UIComposerDocumentExtension.label.Download=\u0130ndir
+UIComposerDocumentExtension.label.View_File=G\u00F6r\u00FCn\u00FCm
+UIComposerDocumentExtension.label.Version=S\u00FCr\u00FCm
+UIPopupWindow.title.UIOneNodePathSelector=Dosya Se\u00E7ici
+UIPopupComposer.title.UIDocActivitySelector=Dosya Se\u00E7in
+UIDocActivitySelector.msg.not-a-file=Dosya yok veya se\u00E7ili dosya ile bir hata olu\u015Ftu.
+UIComposer.msg.error.Must_select_file=\u00D6nce dosya se\u00E7mek zorundas\u0131n\u0131z.
+UIDocActivitySelector.label.cancel=\u0130ptal
+UIDocActivitySelector.label.selectedfile=Se\u00E7in
+UIDSUploadInput.label.Upload=Y\u00FCkle
+UIDocActivity.msg.noPermission=Bu belgeyi g\u00F6r\u00FCnt\u00FCleme/indirme hakk\u0131n\u0131z yok.
