--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_tr.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_tr.properties
@@ -1,65 +1,65 @@
-CalendarUIActivity.msg.event-add={0} added an event: {1}
-CalendarUIActivity.msg.event-update={0} has just updated the event: {1}
-CalendarUIActivity.msg.task-add={0} added a task: {1}
-CalendarUIActivity.msg.task-update={0} has just updated the task: {1}
-CalendarUIActivity.msg.event.label.description=Description: 
-CalendarUIActivity.msg.event.label.location=Location: 
-CalendarUIActivity.msg.event.label.start-time=Start Time:
-CalendarUIActivity.msg.event.label.end-time=End Time:
-CalendarUIActivity.msg.event-not-found=The data is not available at the moment.
-ContactUIActivity.msg.contact-add=A new contact has been added: {0}
-ContactUIActivity.msg.contact-update=The following contact has been updated: {0}
-ContactUIActivity.label.email=Email:
-ContactUIActivity.label.job-title=Job Title:
-ContactUIActivity.label.Phone=Cell Phone: 
-CalendarUIActivity.label.more-info=More Info
-CalendarUIActivity.label.accept-invite=Accept
-CalendarUIActivity.label.refuse-invite=Refuse
-CalendarUIActivity.label.assign-to-me=Assign to Me
-CalendarUIActivity.label.need-action=Needs Action
-CalendarUIActivity.label.in-progress=In Progress
-CalendarUIActivity.label.complete=Complete
-CalendarUIActivity.label.cancel=Cancel
-CalendarUIActivity.label.allday=(all day)
-CalendarUIActivity.label.due-for=Due for
+CalendarUIActivity.msg.event-add={0}bir etkinlik ekledi: {1}
+CalendarUIActivity.msg.event-update={0} bir etkinli\u011Fi g\u00FCncelledi: {1}
+CalendarUIActivity.msg.task-add={0} bir g\u00F6rev ekledi: {1}
+CalendarUIActivity.msg.task-update={0} bir g\u00F6revi g\u00FCncelledi: {1}
+CalendarUIActivity.msg.event.label.description=A\u00E7\u0131klama: 
+CalendarUIActivity.msg.event.label.location=Yer: 
+CalendarUIActivity.msg.event.label.start-time=Ba\u015Flang\u0131\u00E7 Saati:
+CalendarUIActivity.msg.event.label.end-time=Biti\u015F Saati:
+CalendarUIActivity.msg.event-not-found=Veriler \u015Fu anda kullan\u0131labilir de\u011Fil.
+ContactUIActivity.msg.contact-add=Yeni bir ki\u015Fi eklendi: {0}
+ContactUIActivity.msg.contact-update=A\u015Fa\u011F\u0131daki ilgili ki\u015Fi g\u00FCncellendi: {0}
+ContactUIActivity.label.email=E-posta:
+ContactUIActivity.label.job-title=\u0130\u015F Unvan\u0131:
+ContactUIActivity.label.Phone=Cep Tel: 
+CalendarUIActivity.label.more-info=Daha Fazla Bilgi
+CalendarUIActivity.label.accept-invite=Kabul
+CalendarUIActivity.label.refuse-invite=Reddet
+CalendarUIActivity.label.assign-to-me=Bana ata
+CalendarUIActivity.label.need-action=Eylem Gerekiyor
+CalendarUIActivity.label.in-progress=Devam Ediyor
+CalendarUIActivity.label.complete=Tamamland\u0131
+CalendarUIActivity.label.cancel=\u0130ptal
+CalendarUIActivity.label.allday=(t\u00FCm g\u00FCn)
+CalendarUIActivity.label.due-for=bu sebebten
 
-CalendarUIActivity.msg.summary_updated=Summary has been updated to: {0}.
-CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
-CalendarUIActivity.msg.description_removed=Description has been removed.
-CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
-CalendarUIActivity.msg.location_removed=Location has been removed.
-CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
-CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
-CalendarUIActivity.msg.allDay_updated=Event is now an all-day event.
-CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
-CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
-CalendarUIActivity.msg.repeatType_updated=Event will be repeated {0}.
-CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
-CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
-CalendarUIActivity.msg.note_removed=Note has been removed.
-CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
-CalendarUIActivity.msg.needs-action=Task needs action.
-CalendarUIActivity.msg.in-process=Task is in progress.
-CalendarUIActivity.msg.completed=Task has been completed.
-CalendarUIActivity.msg.canceled=Task has been canceled.
-CalendarUIActivity.msg.repeatEvent_instance_removed=Event canceled on {0}.
+CalendarUIActivity.msg.summary_updated=\u00D6zet i\u00E7in g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.description_updated=A\u00E7\u0131klama g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.description_removed=A\u00E7\u0131klama kald\u0131r\u0131ld\u0131.
+CalendarUIActivity.msg.location_updated=Konum g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.location_removed=Konuma kald\u0131r\u0131ld\u0131.
+CalendarUIActivity.msg.priority_updated=\u00D6nceli\u011Fi de\u011Fi\u015Fti: {0}.
+CalendarUIActivity.msg.attachment_updated=Etkinli\u011Fe ek(ler) eklendi.
+CalendarUIActivity.msg.allDay_updated=Etkinlik art\u0131k tam g\u00FCn s\u00FCren bir etkinliktir.
+CalendarUIActivity.msg.fromDateTime_updated=Ba\u015Flang\u0131\u00E7 tarihi g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.toDateTime_updated=Biti\u015F tarihi g\u00FCncellendi: {0}. 
+CalendarUIActivity.msg.repeatType_updated=Tekrarlanan {0} etkinlik olacakt\u0131r.
+CalendarUIActivity.msg.name_updated=Ad\u0131 g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.note_updated=Not g\u00FCncellendi: {0}.
+CalendarUIActivity.msg.note_removed=Not kald\u0131r\u0131ld\u0131.
+CalendarUIActivity.msg.task_attachment_updated=G\u00F6rev i\u00E7in ek(ler) eklendi.
+CalendarUIActivity.msg.needs-action=G\u00F6rev eylem gerekir.
+CalendarUIActivity.msg.in-process=G\u00F6rev devam ediyor.
+CalendarUIActivity.msg.completed=G\u00F6rev tamamland\u0131.
+CalendarUIActivity.msg.canceled=G\u00F6rev iptal edildi.
+CalendarUIActivity.msg.repeatEvent_instance_removed=Etkinlik {0} tarihinde iptal edildi.
 
-CalendarUIActivity.msg.daily=every day
-CalendarUIActivity.msg.every-day=every {interval} days
-CalendarUIActivity.msg.weekly=every week on {byDays}
-CalendarUIActivity.msg.every-week=every {interval} weeks on {byDays}
-CalendarUIActivity.msg.monthly=every month on
-CalendarUIActivity.msg.every-month=every {interval} months
+CalendarUIActivity.msg.daily=Her g\u00FCn
+CalendarUIActivity.msg.every-day=Her {interval} g\u00FCnde
+CalendarUIActivity.msg.weekly=Her hafta {byDays}
+CalendarUIActivity.msg.every-week=Her {interval} haftada {byDays}
+CalendarUIActivity.msg.monthly=her ay
+CalendarUIActivity.msg.every-month=Her {interval} ayda
 CalendarUIActivity.msg.monthly-by-day={theNumber} {theDay}
-CalendarUIActivity.msg.monthly-by-month-day=day {theDay}
-CalendarUIActivity.msg.yearly=every year from {theDay}
-CalendarUIActivity.msg.every-year=every {interval} years from {theDay}
+CalendarUIActivity.msg.monthly-by-month-day=g\u00FCn {theDay}
+CalendarUIActivity.msg.yearly=Her y\u0131l {theDay}
+CalendarUIActivity.msg.every-year=her {interval} y\u0131ldan {theDay}
 
-CalendarUIActivity.msg.count-times={count} times
-CalendarUIActivity.msg.until=until {until}
+CalendarUIActivity.msg.count-times={count} kez
+CalendarUIActivity.msg.until={until} kadar
 
-CalendarUIActivity.msg.summary-the-first=the first
-CalendarUIActivity.msg.summary-the-second=the second
-CalendarUIActivity.msg.summary-the-third=the third
-CalendarUIActivity.msg.summary-the-fourth=the fourth
-CalendarUIActivity.msg.summary-the-last=the last
+CalendarUIActivity.msg.summary-the-first=ilk
+CalendarUIActivity.msg.summary-the-second=ikinci
+CalendarUIActivity.msg.summary-the-third=\u00FC\u00E7\u00FCnc\u00FC
+CalendarUIActivity.msg.summary-the-fourth=d\u00F6rd\u00FCnc\u00FC
+CalendarUIActivity.msg.summary-the-last=son
