--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_fr.properties
@@ -6,6 +6,9 @@ ForumUIActivity.label.reply=R\u00E9pondre
 ForumUIActivity.label.lastReply=Voir la derni\u00E8re r\u00E9ponse
 ForumUIActivity.label.submit=Valider
 ForumUIActivity.label.view=Voir
+ForumUIActivity.label.noReply=Pas de r\u00E9ponses
+ForumUIActivity.label.oneReply={0} r\u00E9ponse
+ForumUIActivity.label.replies={0} r\u00E9ponses
 ForumUIActivity.msg.reply-success=Vous avez r\u00E9pondu au message: {0}
 ForumUIActivity.msg.reply-empty=Le titre ou le message est vide.
 ForumUIActivity.forum.update-topic-title=Le titre a \u00E9t\u00E9 chang\u00E9 en : {0}
