--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_ja.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_ja.properties
@@ -6,6 +6,9 @@ ForumUIActivity.label.reply=\u8FD4\u4FE1
 ForumUIActivity.label.lastReply=\u6700\u65B0\u306E\u8FD4\u4FE1\u3092\u8868\u793A
 ForumUIActivity.label.submit=\u9001\u4FE1
 ForumUIActivity.label.view=\u30D3\u30E5\u30FC
+ForumUIActivity.label.noReply=No reply
+ForumUIActivity.label.oneReply={0} reply
+ForumUIActivity.label.replies={0} replies
 ForumUIActivity.msg.reply-success=\u6295\u7A3F\uFF1A {0}  \u306B\u8FD4\u4FE1\u3057\u307E\u3057\u305F
 ForumUIActivity.msg.reply-empty=\u30BF\u30A4\u30C8\u30EB\u307E\u305F\u306F\u30E1\u30C3\u30BB\u30FC\u30B8\u304C\u7A7A\u6B04\u3067\u3059
 ForumUIActivity.forum.update-topic-title=\u30BF\u30A4\u30C8\u30EB\u304C\u66F4\u65B0\u3055\u308C\u307E\u3057\u305F\uFF1A {0}
