--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_vi.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_vi.properties
@@ -6,6 +6,9 @@ ForumUIActivity.label.reply=Tr\u1EA3 l\u1EDDi
 ForumUIActivity.label.lastReply=Xem tr\u1EA3 l\u1EDDi m\u1EDBi nh\u1EA5t
 ForumUIActivity.label.submit=G\u1EEDi
 ForumUIActivity.label.view=Xem
+ForumUIActivity.label.noReply=Kh\u00F4ng c\u00F3 tr\u1EA3 l\u1EDDi
+ForumUIActivity.label.oneReply={0} tr\u1EA3 l\u1EDDi
+ForumUIActivity.label.replies={0} tr\u1EA3 l\u1EDDi
 ForumUIActivity.msg.reply-success=Ba\u0323n \u0111a\u0303 tra\u0309 l\u01A1\u0300i ba\u0300i vi\u00EA\u0301t: {0}
 ForumUIActivity.msg.reply-empty=Ti\u00EAu \u0111\u00EA\u0300 ho\u0103\u0323c th\u00F4ng ba\u0301o co\u0300n tr\u00F4\u0301ng
 ForumUIActivity.forum.update-topic-title=Ti\u00EAu \u0111\u1EC1 \u0111\u00E3 \u0111\u01B0\u1EE3c c\u1EADp nh\u1EADt th\u00E0nh: {0}
