--- a/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_tr.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_tr.properties
@@ -1,12 +1,12 @@
-quicksearch.label=Quick Search Settings
-quicksearch.resultsPerType.label=Results per Type:
-quicksearch.searchIn.label=Search In:
-quicksearch.everything.label=All
-quicksearch.currentsite.label=Search in current site only:
-quicksearch.saveSettings.label=Save Settings
-quicksearch.seeAll.label=See All Search Results
-quicksearch.noResults.label=No result for
-quicksearch.input.label=Search:
-quicksearch.alert.saveSetting=Your setting has been saved.
-quicksearch.alert.error.saveSetting=Problem occurred when saving your setting:
-quicksearch.searching.label=searching..
+quicksearch.label=H\u0131zl\u0131 arama ayarlar\u0131
+quicksearch.resultsPerType.label=Sonu\u00E7lar her t\u00FCr\u00FC:
+quicksearch.searchIn.label=\u0130\u00E7inde arama:
+quicksearch.everything.label=T\u00FCm\u00FC
+quicksearch.currentsite.label=Yaln\u0131zca ge\u00E7erli sitede ara:
+quicksearch.saveSettings.label=Ayarlar\u0131 Kaydet
+quicksearch.seeAll.label=T\u00FCm arama sonu\u00E7lar\u0131 g\u00F6ster
+quicksearch.noResults.label=Hi\u00E7bir sonu\u00E7 yok
+quicksearch.input.label=Arama:
+quicksearch.alert.saveSetting=Ayar\u0131n\u0131z\u0131 kaydedildi.
+quicksearch.alert.error.saveSetting=Ayar\u0131n\u0131z\u0131 kaydederken hata olu\u015Ftu:
+quicksearch.searching.label=Aran\u0131yor..
