--- a/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_tr.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_tr.properties
@@ -1,7 +1,7 @@
-searchadministration.label=Search Administration
-searchadministration.contentType.label=Content Type
-searchadministration.description.label=Description
-searchadministration.action.label=Action
-searchadministration.disable.label=Disable
-searchadministration.alert.save=Search setting has been saved succesfully.
-searchadministration.alert.error.save=Problem occurred when saving your setting:
+searchadministration.label=Arama Y\u00F6netimi
+searchadministration.contentType.label=\u0130\u00E7erik t\u00FCr\u00FC
+searchadministration.description.label=A\u00E7\u0131klama
+searchadministration.action.label=Eylem
+searchadministration.disable.label=Devre D\u0131\u015F\u0131 B\u0131rak
+searchadministration.alert.save=Arama ayarlar\u0131 ba\u015Far\u0131yla kaydedildi.
+searchadministration.alert.error.save=Ayar\u0131n\u0131z\u0131 kaydederken hata olu\u015Ftu:
