--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_tr.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_tr.properties
@@ -1,20 +1,20 @@
-unifiedsearch.index.label=Search
-unifiedsearch.index.relevancy.label=Relevance
-unifiedsearch.index.date.label=Date
-unifiedsearch.index.title.label=Title
-unifiedsearch.index.sortBy.label=Sort By:
-unifiedsearch.index.filterBy.label=Filter By
-unifiedsearch.index.allsites.label=All Sites
-unifiedsearch.index.contentTypes.label=All Content Types
-unifiedsearch.index.showmore.label=Show More Results
-unifiedsearch.edit.label=Search Settings
-unifiedsearch.edit.resultsPerPage.label=Results per page:
-unifiedsearch.edit.searchIn.label=Search In:
-unifiedsearch.edit.everything.label=Everything
-unifiedsearch.edit.currentsite.label=Search in current site only:
-unifiedsearch.edit.hideSearchForm.label=Hide search form:
-unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
-unifiedsearch.edit.saveSettings.label=Save Settings
-unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
-unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
-unifiedsearch.searching.label=Searching...
+unifiedsearch.index.label=Arama
+unifiedsearch.index.relevancy.label=\u0130lgi
+unifiedsearch.index.date.label=Tarihi
+unifiedsearch.index.title.label=Ba\u015Fl\u0131k
+unifiedsearch.index.sortBy.label=S\u0131ralama \u00F6l\u00E7\u00FCt\u00FC:
+unifiedsearch.index.filterBy.label=Filtre \u00F6l\u00E7\u00FCt\u00FC
+unifiedsearch.index.allsites.label=T\u00FCm siteler
+unifiedsearch.index.contentTypes.label=T\u00FCm i\u00E7erik t\u00FCrleri
+unifiedsearch.index.showmore.label=Daha fazla sonu\u00E7 g\u00F6ster
+unifiedsearch.edit.label=Arama ayarlar\u0131
+unifiedsearch.edit.resultsPerPage.label=Sayfa ba\u015F\u0131na Sonu\u00E7:
+unifiedsearch.edit.searchIn.label=\u0130\u00E7inde arama:
+unifiedsearch.edit.everything.label=Her \u015Fey
+unifiedsearch.edit.currentsite.label=Yaln\u0131zca ge\u00E7erli sitede ara:
+unifiedsearch.edit.hideSearchForm.label=Arama formu gizle:
+unifiedsearch.edit.hideFacetsFilter.label=S\u00FCzme y\u00F6nleri gizle:
+unifiedsearch.edit.saveSettings.label=Ayarlar\u0131 Kaydet
+unifiedsearch.edit.alert.saveSettings=Ayarlar\u0131n\u0131z\u0131 kaydedildi.
+unifiedsearch.edit.alert.error.saveSettings=Ayar\u0131n\u0131z\u0131 kaydederken hata olu\u015Ftu:
+unifiedsearch.searching.label=Aran\u0131yor...
