--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_tr.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_tr.properties
@@ -1,7 +1,7 @@
-WikiUIActivity.label.page-create={0} has created Wiki page: {1}
-WikiUIActivity.label.page-update={0} has edited Wiki page: {1}
-WikiUIActivity.label.view-change=View Changes
-WikiUIActivity.label.version=Version: 
-WikiUIActivity.msg.update-page-title=Page's title has been updated to: 
-WikiUIActivity.msg.update-page-content=Page's content has been edited.
-WikiUIActivity.msg.move-page=Page has been moved to: 
+WikiUIActivity.label.page-create={0}Wiki sayfas\u0131 yarat\u0131ld\u0131: {1}
+WikiUIActivity.label.page-update={0} Wiki sayfas\u0131 d\u00FCzenlendi: {1}
+WikiUIActivity.label.view-change=De\u011Fi\u015Fiklikleri G\u00F6r\u00FCnt\u00FCle
+WikiUIActivity.label.version=S\u00FCr\u00FCm: 
+WikiUIActivity.msg.update-page-title=Sayfan\u0131n ba\u015Fl\u0131\u011F\u0131 g\u00FCncellendi: 
+WikiUIActivity.msg.update-page-content=Sayfan\u0131n i\u00E7eri\u011Fi d\u00FCzenlendi.
+WikiUIActivity.msg.move-page=Sayfa ta\u015F\u0131nd\u0131: 
