SOC-3971 | Step 5: NOTIFICATIONS_04c For another file activity + Apply UI.

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -1,3 +1,4 @@
 #############################################################################
 												#ECMSNotification #
 #############################################################################
+FileActivityChildPlugin.label.FileSize=File Size
