--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -1,4 +1,4 @@
 #############################################################################
 #ECMSNotification #
 #############################################################################
-
+FileActivityChildPlugin.label.FileSize=File Size
