SOC-4086 | [Feature Content] Implement play icon on video thumbnails.

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_en.properties
@@ -2,3 +2,4 @@
 #ECMSNotification #
 #############################################################################
 FileActivityChildPlugin.label.FileSize=File Size
+FileActivityChildPlugin.label.WatchTheVideo=Watch the video
