--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_en.properties
@@ -53,6 +53,8 @@ AnswerUIActivity.label.question.point=Points
 PollUIActivity.label.update_poll=Poll has been updated.
 PollUIActivity.label.vote={0} vote
 PollUIActivity.label.votes={0} votes
+PollUIActivity.label.voter={0} voter
+PollUIActivity.label.voters={0} voters
 PollUIActivity.action.vote=Vote
 
 ActivityRating.title.rank5=Good
