--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
@@ -18,3 +18,7 @@ unifiedsearch.edit.saveSettings.label=Save Settings
 unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
 unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
 unifiedsearch.searching.label=Searching...
+unifiedsearch.index.noResult.label=No Result Found
+unifiedsearch.index.tryDiffWord.label=Try different keywords.
+unifiedsearch.index.yourSearch.label=Your search
+unifiedsearch.index.notMatch.label=did not match any content.
