INTEG-251 modify the way using resource bundle in the case not result found

--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
@@ -20,5 +20,4 @@ unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your se
 unifiedsearch.searching.label=Searching...
 unifiedsearch.index.noResult.label=No Result Found
 unifiedsearch.index.tryDiffWord.label=Try different keywords.
-unifiedsearch.index.yourSearch.label=Your search
-unifiedsearch.index.notMatch.label=did not match any content.
+unifiedsearch.index.notMatch.label=Your search <b id="keyword">cloud</b> did not match any content.
