ECMS-6975: Update resource bundle

--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
@@ -17,7 +17,7 @@
 			<ShareWith>Share with:</ShareWith>
 			<Access>Access</Access>
 			<SpaceMember>Space Members</SpaceMember>
-			<SelectASpace>Select a space</SelectASpace>
+			<SelectASpace>Select a Space</SelectASpace>
 			<SharedADocument>shared a document</SharedADocument>
 			<NoSpace>Please choose at least 1 space(s) to share</NoSpace>
 			<option>
