--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
@@ -22,7 +22,7 @@
 			<NoSpace>Please choose at least 1 space(s) to share</NoSpace>
 			<option>
 				<read>Can View</read>
-				<modify>Can Modify</modify>
+				<modify>Can Edit</modify>
 			</option>
 		</label>
 	</UIShareDocuments>
