--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/ShareDocuments_en.xml
@@ -13,7 +13,7 @@
 		<label>
 			<ShareButton>Share</ShareButton>
 			<CancelButton>Cancel</CancelButton>
-			<TextAreaInit>Add a comment about this file...</TextAreaInit>
+			<TextAreaInit>Add a comment about to this file...</TextAreaInit>
 			<ShareWith>Share with:</ShareWith>
 			<Access>Access</Access>
 			<SpaceMember>Space Members</SpaceMember>
