--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/social/plugin/link/UILinkComposerPlugin_nl.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/social/plugin/link/UILinkComposerPlugin_nl.properties
@@ -15,9 +15,9 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 UIActivityComposer.label.UILinkActivityComposer=Link
-UILinkComposerPlugin.label.Attach=Attach
+UILinkComposerPlugin.label.Attach=Bijvoegen
 UILinkComposerPlugin.label.InputLink=Input Link
-UILinkComposerPlugin.msg.No_Thumbnail=No Thumbnail.
-UILinkComposerPlugin.msg.Previous_Image=Previous Image
-UILinkComposerPlugin.msg.Next_Image=Next Image
-UILinkComposerPlugin.msg.error.Attach_Link=A problem occured when sharing this link. Please make sure to input a valid URL.
+UILinkComposerPlugin.msg.No_Thumbnail=Geen Thumbnail.
+UILinkComposerPlugin.msg.Previous_Image=Vorige afbeelding
+UILinkComposerPlugin.msg.Next_Image=Volgende afbeelding
+UILinkComposerPlugin.msg.error.Attach_Link=Er is een probleem opgetreden bij het delen van deze link. Zorg ervoor dat het invoeren van een geldige URL.
