--- a/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_nl.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/searchadministration/searchadministration_nl.properties
@@ -1,7 +1,7 @@
-searchadministration.label=Search Administration
-searchadministration.contentType.label=Content Type
-searchadministration.description.label=Description
+searchadministration.label=Search administratie
+searchadministration.contentType.label=Type inhoud
+searchadministration.description.label=Beschrijving
 searchadministration.action.label=#{word.action}
-searchadministration.disable.label=Disable
-searchadministration.alert.save=Search setting has been saved succesfully.
-searchadministration.alert.error.save=Problem occurred when saving your setting:
+searchadministration.disable.label=Uitschakelen
+searchadministration.alert.save=Zoek instelling is met succes opgeslagen.
+searchadministration.alert.error.save=Probleem is opgetreden bij het opslaan van uw instelling:
