--- a/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_nl.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_nl.properties
@@ -1,23 +1,23 @@
-unifiedsearch.index.label=Search
-unifiedsearch.index.relevancy.label=Relevance
+unifiedsearch.index.label=Zoeken
+unifiedsearch.index.relevancy.label=Relevantie
 unifiedsearch.index.date.label=#{word.date}
 unifiedsearch.index.title.label=#{word.title}
-unifiedsearch.index.sortBy.label=Sort By
-unifiedsearch.index.filterBy.label=Filter By
-unifiedsearch.index.allsites.label=All Sites
-unifiedsearch.index.contentTypes.label=All Content Types
-unifiedsearch.index.showmore.label=Show More Results
-unifiedsearch.edit.label=Search Settings
-unifiedsearch.edit.resultsPerPage.label=Results per page:
-unifiedsearch.edit.searchIn.label=Search In:
-unifiedsearch.edit.everything.label=Everything
-unifiedsearch.edit.currentsite.label=Search in current site only:
-unifiedsearch.edit.hideSearchForm.label=Hide search form:
-unifiedsearch.edit.hideFacetsFilter.label=Hide facets filter:
-unifiedsearch.edit.saveSettings.label=Save Settings
-unifiedsearch.edit.alert.saveSettings=Your settings have been saved.
-unifiedsearch.edit.alert.error.saveSettings=Problem occurred when saving your setting:
-unifiedsearch.searching.label=Searching...
-unifiedsearch.index.noResult.label=No Result Found
-unifiedsearch.index.tryDiffWord.label=You should try different keywords.
-unifiedsearch.index.notMatch.label=Your search <b id="keyword">cloud</b> did not match any content.
+unifiedsearch.index.sortBy.label=Sorteren op
+unifiedsearch.index.filterBy.label=Filteren op
+unifiedsearch.index.allsites.label=Alle Sites
+unifiedsearch.index.contentTypes.label=Alle inhoudstypen
+unifiedsearch.index.showmore.label=Toon meer resultaten
+unifiedsearch.edit.label=Zoekinstellingen
+unifiedsearch.edit.resultsPerPage.label=Resultaten per pagina:
+unifiedsearch.edit.searchIn.label=Zoek in:
+unifiedsearch.edit.everything.label=Alles
+unifiedsearch.edit.currentsite.label=Zoeken in de huidige site alleen:
+unifiedsearch.edit.hideSearchForm.label=Zoekformulier verbergen:
+unifiedsearch.edit.hideFacetsFilter.label=Verbergen facetten filter:
+unifiedsearch.edit.saveSettings.label=Instellingen opslaan
+unifiedsearch.edit.alert.saveSettings=Uw instellingen zijn opgeslagen.
+unifiedsearch.edit.alert.error.saveSettings=Probleem is opgetreden bij het opslaan van uw instelling:
+unifiedsearch.searching.label=Zoeken...
+unifiedsearch.index.noResult.label=Geen resultaat gevonden
+unifiedsearch.index.tryDiffWord.label=Je moet het uitproberen van verschillende sleutelwoorden.
+unifiedsearch.index.notMatch.label=Uw zoekopdracht <b id="keyword"> wolk</b> niet overeenkomen met de inhoud.
