--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_es_ES.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_es_ES.properties
@@ -2,9 +2,9 @@ quicksearch.type.Files=Archivos
 quicksearch.type.Documents=Documentos
 quicksearch.type.Wiki=Wiki
 quicksearch.type.Pages=P\u00E1ginas
-quicksearch.type.Discussions=Discussions
+quicksearch.type.Discussions=Debates
 quicksearch.type.People=Contactos
 quicksearch.type.Spaces=Espacios
-quicksearch.type.Events=Events
+quicksearch.type.Events=Eventos
 quicksearch.type.Tasks=Tareas
 quicksearch.type.Answers=Respuestas
