--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_nl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_nl.properties
@@ -1,10 +1,10 @@
-quicksearch.type.Files=Files
-quicksearch.type.Documents=Documents
+quicksearch.type.Files=Bestanden
+quicksearch.type.Documents=Documenten
 quicksearch.type.Wiki=Wiki
-quicksearch.type.Pages=Pages
-quicksearch.type.Discussions=Discussions
-quicksearch.type.People=People
-quicksearch.type.Spaces=Spaces
-quicksearch.type.Events=Events
-quicksearch.type.Tasks=Tasks
-quicksearch.type.Answers=Answers
+quicksearch.type.Pages=Pagina's
+quicksearch.type.Discussions=Discussies
+quicksearch.type.People=Mensen
+quicksearch.type.Spaces=Ruimtes
+quicksearch.type.Events=Gebeurtenissen
+quicksearch.type.Tasks=Taken
+quicksearch.type.Answers=Antwoorden
