--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ca.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_ca.properties
@@ -6,6 +6,6 @@ unifiedSearch.type.Pages=P\u00E0gines
 unifiedSearch.type.Discussions=Discussions
 unifiedSearch.type.People=Contactes
 unifiedSearch.type.Spaces=Espais
-unifiedSearch.type.Events=Events
+unifiedSearch.type.Events=Esdeveniments
 unifiedSearch.type.Tasks=Tasques
 unifiedSearch.type.Answers=Respostes
