--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_es_ES.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_es_ES.properties
@@ -3,9 +3,9 @@ unifiedSearch.type.Files=Archivos
 unifiedSearch.type.Documents=Documentos
 unifiedSearch.type.Wiki=Wikis
 unifiedSearch.type.Pages=P\u00E1ginas
-unifiedSearch.type.Discussions=Discussions
+unifiedSearch.type.Discussions=Debates
 unifiedSearch.type.People=Contactos
 unifiedSearch.type.Spaces=Espacios
-unifiedSearch.type.Events=Events
+unifiedSearch.type.Events=Eventos
 unifiedSearch.type.Tasks=Tareas
 unifiedSearch.type.Answers=Respuestas
