--- a/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_nl.properties
+++ b/integ-calendar/integ-calendar-social/src/main/resources/locale/calendar/integration/integration_nl.properties
@@ -1,67 +1,67 @@
-CalendarUIActivity.msg.event-add={0} added an event: {1}
-CalendarUIActivity.msg.event-update={0} has just updated the event: {1}
-CalendarUIActivity.msg.task-add={0} added a task: {1}
+CalendarUIActivity.msg.event-add={0} toegevoegd een evenement: {1}
+CalendarUIActivity.msg.event-update={0} is de gebeurtenis bijgewerkt: {1}
+CalendarUIActivity.msg.task-add={0} een taak toegevoegd: {1}
 CalendarUIActivity.msg.task-update={0} has just updated the task: {1}
-CalendarUIActivity.msg.event.label.description=Description: 
-CalendarUIActivity.msg.event.label.location=Location: 
-CalendarUIActivity.msg.event.label.start-time=Start Time:
-CalendarUIActivity.msg.event.label.end-time=End Time:
-CalendarUIActivity.msg.event-not-found=The data is not available at the moment.
-ContactUIActivity.msg.contact-add=A new contact has been added: {0}
-ContactUIActivity.msg.contact-update=The following contact has been updated: {0}
-ContactUIActivity.label.email=Email:
-ContactUIActivity.label.job-title=Job Title:
-ContactUIActivity.label.Phone=Cell Phone: 
-CalendarUIActivity.label.more-info=More Info
-CalendarUIActivity.label.accept-invite=Accept
-CalendarUIActivity.label.refuse-invite=Refuse
-CalendarUIActivity.label.assign-to-me=Assign to Me
-CalendarUIActivity.label.need-action=Needs Action
-CalendarUIActivity.label.in-progress=In Progress
-CalendarUIActivity.label.complete=Complete
+CalendarUIActivity.msg.event.label.description=Beschrijving
+CalendarUIActivity.msg.event.label.location=Plaats: 
+CalendarUIActivity.msg.event.label.start-time=Begintijd:
+CalendarUIActivity.msg.event.label.end-time=Eindtijd:
+CalendarUIActivity.msg.event-not-found=De gegevens zijn niet beschikbaar op dit moment.
+ContactUIActivity.msg.contact-add=Een nieuwe contactpersoon heeft toegevoegd: {0}
+ContactUIActivity.msg.contact-update=De volgende contactpersoon is bijgwerkt: {0}
+ContactUIActivity.label.email=E-mail:
+ContactUIActivity.label.job-title=Job Titel:
+ContactUIActivity.label.Phone=Mobiele telefoon: 
+CalendarUIActivity.label.more-info=Meer Info
+CalendarUIActivity.label.accept-invite=Akkoord
+CalendarUIActivity.label.refuse-invite=Weigeren
+CalendarUIActivity.label.assign-to-me=Toewijzen aan mij
+CalendarUIActivity.label.need-action=Needs action
+CalendarUIActivity.label.in-progress=In progress
+CalendarUIActivity.label.complete=Voltooien
 CalendarUIActivity.label.cancel=#{word.cancel}
-CalendarUIActivity.label.allday=(all day)
-CalendarUIActivity.label.due-for=Due for
+CalendarUIActivity.label.allday=(hele dag)
+CalendarUIActivity.label.due-for=Verschuldigd voor
 
-CalendarUIActivity.msg.summary_updated=Title has been updated to: {0}.
-CalendarUIActivity.msg.description_updated=Description has been updated to: {0}.
-CalendarUIActivity.msg.description_removed=Description has been removed.
-CalendarUIActivity.msg.location_updated=Location has been updated to: {0}.
-CalendarUIActivity.msg.location_removed=Location has been removed.
-CalendarUIActivity.msg.priority_updated=Priority is now: {0}.
-CalendarUIActivity.msg.attachment_updated=Attachment(s) has been added to the event.
-CalendarUIActivity.msg.allDay_updated=Event is now an all-day event.
-CalendarUIActivity.msg.fromDateTime_updated=Start date has been updated to: {0}.
-CalendarUIActivity.msg.toDateTime_updated=End date has been updated to: {0}. 
-CalendarUIActivity.msg.repeatType_updated=Event will be repeated {0}.
-CalendarUIActivity.msg.name_updated=Name has been updated to: {0}.
-CalendarUIActivity.msg.note_updated=Note has been updated to: {0}.
-CalendarUIActivity.msg.note_removed=Note has been removed.
-CalendarUIActivity.msg.task_attachment_updated=Attachment(s) has been added to the task.
-CalendarUIActivity.msg.needs-action=Task needs action.
-CalendarUIActivity.msg.in-process=Task is in progress.
-CalendarUIActivity.msg.completed=Task has been completed.
-CalendarUIActivity.msg.canceled=Task has been canceled.
-CalendarUIActivity.msg.repeatEvent_instance_removed=Event canceled on {0}.
-CalendarUIActivity.msg.stop_repeating=Event will stop repeating on {0}
-CalendarUIActivity.msg.event_cancelled=Event cancelled for {0}
+CalendarUIActivity.msg.summary_updated=Titel is vernieuwd naar: {0}.
+CalendarUIActivity.msg.description_updated=Beschrijving is vernieuwd naar: {0}.
+CalendarUIActivity.msg.description_removed=Beschrijving is verwijderd.
+CalendarUIActivity.msg.location_updated=Locatie is vernieuwd naar: {0}.
+CalendarUIActivity.msg.location_removed=Locatie is verwijderd.
+CalendarUIActivity.msg.priority_updated=Prioriteit is nu: {0}.
+CalendarUIActivity.msg.attachment_updated=Bijlage(n) is toegevoegd aan de gebeurtenis.
+CalendarUIActivity.msg.allDay_updated=Gebeurtenis is nu een hele dag gebeurtenis.
+CalendarUIActivity.msg.fromDateTime_updated=Begindatum is vernieuwd naar: {0}.
+CalendarUIActivity.msg.toDateTime_updated=Einddatum is vernieuwd naar: {0}. 
+CalendarUIActivity.msg.repeatType_updated=Evenement zal worden herhaalde {0}.
+CalendarUIActivity.msg.name_updated=Naam is vernieuwd naar: {0}.
+CalendarUIActivity.msg.note_updated=Opmerking is vernieuwd naar: {0}.
+CalendarUIActivity.msg.note_removed=Opmerking is verwijderd.
+CalendarUIActivity.msg.task_attachment_updated=Bijlage(n) is toegevoegd aan de taak.
+CalendarUIActivity.msg.needs-action=Taak moet actie.
+CalendarUIActivity.msg.in-process=Taak wordt uitgevoerd.
+CalendarUIActivity.msg.completed=Taak is voltooid.
+CalendarUIActivity.msg.canceled=Taak is geannuleerd.
+CalendarUIActivity.msg.repeatEvent_instance_removed=Gebeurtenis geannuleerd op {0}.
+CalendarUIActivity.msg.stop_repeating=Gebeurtenis stopt herhalen op {0}
+CalendarUIActivity.msg.event_cancelled=Gebeurtenis geannuleerd voor {0}
 
-CalendarUIActivity.msg.daily=every day
-CalendarUIActivity.msg.every-day=every {interval} days
-CalendarUIActivity.msg.weekly=every week on {byDays}
-CalendarUIActivity.msg.every-week=every {interval} weeks on {byDays}
-CalendarUIActivity.msg.monthly=every month on
-CalendarUIActivity.msg.every-month=every {interval} months
+CalendarUIActivity.msg.daily=elke dag
+CalendarUIActivity.msg.every-day=elke {interval} dagen
+CalendarUIActivity.msg.weekly=elke week op {byDays}
+CalendarUIActivity.msg.every-week=elke {interval} weken op {byDays}
+CalendarUIActivity.msg.monthly=elke maand op
+CalendarUIActivity.msg.every-month={interval}-maandelijks
 CalendarUIActivity.msg.monthly-by-day={theNumber} {theDay}
-CalendarUIActivity.msg.monthly-by-month-day=day {theDay}
-CalendarUIActivity.msg.yearly=every year from {theDay}
-CalendarUIActivity.msg.every-year=every {interval} years from {theDay}
+CalendarUIActivity.msg.monthly-by-month-day=dag {theDay}
+CalendarUIActivity.msg.yearly=elk jaar van {theDay}
+CalendarUIActivity.msg.every-year=elk jaar {interval} van {theDay}
 
-CalendarUIActivity.msg.count-times={count} times
-CalendarUIActivity.msg.until=until {until}
+CalendarUIActivity.msg.count-times={count} tijden
+CalendarUIActivity.msg.until=tot {until}
 
-CalendarUIActivity.msg.summary-the-first=the first
-CalendarUIActivity.msg.summary-the-second=the second
-CalendarUIActivity.msg.summary-the-third=the third
-CalendarUIActivity.msg.summary-the-fourth=the fourth
-CalendarUIActivity.msg.summary-the-last=the last
+CalendarUIActivity.msg.summary-the-first=de eerste
+CalendarUIActivity.msg.summary-the-second=de tweede
+CalendarUIActivity.msg.summary-the-third=de derde
+CalendarUIActivity.msg.summary-the-fourth=de vierde
+CalendarUIActivity.msg.summary-the-last=de laatste
