--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_nl.xml
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/SocialIntegration_nl.xml
@@ -2,7 +2,7 @@
 <bundle>
   <UIConfirmMessage>
     <label>
-      <ReadOnly>Open Read-only</ReadOnly>
+      <ReadOnly>Open alleen-lezen</ReadOnly>
     </label>
   </UIConfirmMessage>
 
@@ -13,91 +13,91 @@
   </UISocialPopupWindow>
   <SocialIntegration>
     <titles>
-      <fileSize>File Size</fileSize>
+      <fileSize>bestandsgrootte</fileSize>
     </titles>
     <messages>
-      <createdBy>was created by</createdBy>
-      <editedBy>was edited by</editedBy>
-      <system>the system</system>
-      <readmore>...Read More.</readmore>
-      <editTitle>Title has been updated to: {0}</editTitle>
-      <editName>Name has been updated to: {0}</editName>
-      <editDescription>Description has been updated to: {0}</editDescription>
-      <singleCreator>Creator is {0}</singleCreator>
-      <multiCreator>Creators are {0}</multiCreator>
-      <addSource>File source: {0} has been added</addSource>
-      <addMultiSource>File sources: {0} have been added</addMultiSource>
-      <removeSource>File source: {0} has been removed</removeSource>
-      <removeMultiSource>File sources: {0} have been removed</removeMultiSource>
-      <editSummary>Summary has been updated to: {0}</editSummary>
-      <editLanguage>Language has been updated to: {0}</editLanguage>
-      <editContent>Content has been updated.</editContent>
-      <editFile>File has been updated.</editFile>
-      <emptyTitle>The title has been removed.</emptyTitle>
-      <emptySummary>The summary has been removed.</emptySummary>
-      <emptyContent>The content has been removed.</emptyContent>
-      <updateMetadata>Metadata {0} has been updated to: {1}</updateMetadata>
-      <removeMetadata>Metadata {0} has been removed.</removeMetadata>  
-      <removeTitle>Title has been removed.</removeTitle>
-      <removeName>Name has been removed.</removeName>
-      <removeSummary>Summary has been removed.</removeSummary>
-      <removeDescription>Description has been removed.</removeDescription>
-      <removeCreator>Creator: {0} has been removed.</removeCreator>
-      <removeMultiCreator>Creators: {0} have been removed.</removeMultiCreator>
-      <removeLanguage>Language has been removed.</removeLanguage>
-      <removeContent>Content has been removed.</removeContent>
-      <attachmentAdded>File(s) has been attached.</attachmentAdded>
-      <attachmentRemoved>File(s) has been removed.</attachmentRemoved>
-      <categoryAdded>Category: {0} has been added.</categoryAdded>
-      <categoryRemoved>Category: {0} has been removed.</categoryRemoved>
-      <tagAdded>Tag: {0} has been added.</tagAdded>
-      <tagsAdded>Tags: {0} have been added.</tagsAdded>
-      <tagRemoved>Tag: {0} has been removed.</tagRemoved>
-      <tagsRemoved>Tags: {0} have been removed.</tagsRemoved>
+      <createdBy>werd gemaakt door</createdBy>
+      <editedBy>werd uitgegeven door</editedBy>
+      <system>het systeem</system>
+      <readmore>... Lees meer.</readmore>
+      <editTitle>Titel is vernieuwd naar: {0}</editTitle>
+      <editName>Naam is vernieuwd naar: {0}</editName>
+      <editDescription>Beschrijving is vernieuwd naar: {0}</editDescription>
+      <singleCreator>De maker is {0}</singleCreator>
+      <multiCreator>Makers zijn {0}</multiCreator>
+      <addSource>Bronbestand: {0} istoegevoegd</addSource>
+      <addMultiSource>Bronnen bestand: {0} zijn toegevoegd</addMultiSource>
+      <removeSource>Bronbestand: {0} is verwijderd</removeSource>
+      <removeMultiSource>Bronnen bestand: {0} zijn verwijderd</removeMultiSource>
+      <editSummary>Samenvatting is vernieuwd naar: {0}</editSummary>
+      <editLanguage>Taal is vernieuwd naar: {0}</editLanguage>
+      <editContent>Inhoud is bijgewerkt.</editContent>
+      <editFile>Bestand is bijgewerkt.</editFile>
+      <emptyTitle>De titel is verwijderd.</emptyTitle>
+      <emptySummary>De samenvatting is verwijderd.</emptySummary>
+      <emptyContent>De inhoud is verwijderd.</emptyContent>
+      <updateMetadata>Metagegevens {0} is vernieuwd naar: {1}</updateMetadata>
+      <removeMetadata>Metagegevens {0} is verwijderd.</removeMetadata>  
+      <removeTitle>Titel is verwijderd.</removeTitle>
+      <removeName>Naam is verwijderd.</removeName>
+      <removeSummary>Samenvatting is verwijderd.</removeSummary>
+      <removeDescription>Beschrijving is verwijderd.</removeDescription>
+      <removeCreator>Maker: {0} is verwijderd.</removeCreator>
+      <removeMultiCreator>Makers: {0} zijn verwijderd.</removeMultiCreator>
+      <removeLanguage>Taal is verwijderd.</removeLanguage>
+      <removeContent>Inhoud is verwijderd.</removeContent>
+      <attachmentAdded>Bestanden zijn gekoppeld.</attachmentAdded>
+      <attachmentRemoved>Bestand(en) is verwijderd.</attachmentRemoved>
+      <categoryAdded>Categorie: {0} is toegevoegd.</categoryAdded>
+      <categoryRemoved>Categorie: {0} is verwijderd.</categoryRemoved>
+      <tagAdded>Tag: {0} is toegevoegd.</tagAdded>
+      <tagsAdded>Tags: {0} zijn toegevoegd.</tagsAdded>
+      <tagRemoved>Tag: {0} is verwijderd.</tagRemoved>
+      <tagsRemoved>Tags: {0} zijn verwijderd.</tagsRemoved>
       <stateChange>
-        <pending>Publication status is now pending.</pending>
-        <approved>Document has been approved.</approved>
-        <staged>Publication has been staged.</staged>
-        <published>Document has been published.</published>
+        <pending>De status van de publicatie is nu in behandeling.</pending>
+        <approved>Document is goedgekeurd.</approved>
+        <staged>Publicatie heeft zijn opgevoerd.</staged>
+        <published>Document is gepubliceerd.</published>
       </stateChange>
-      <contentMoved>Publication has been moved to: {0}</contentMoved>
-      <fileMoved>File has been moved to: {0}</fileMoved>
-      <revisionChanged>Publication has been restored to version: {0}</revisionChanged>
-      <version>Version: {0}</version>
+      <contentMoved>Publicatie is verhuisd naar: {0}</contentMoved>
+      <fileMoved>Bestand is verplaatst naar: {0}</fileMoved>
+      <revisionChanged>Publicatie is gerestaureerd tot versie: {0}</revisionChanged>
+      <version>Versie: {0}</version>
     </messages>
     <publicationStates>
-      <archived>Archived</archived>
-      <obsolete>Obsolete</obsolete>
-      <unpublished>Unpublished</unpublished>
-      <draft>Draft</draft>
-      <pending>Pending</pending>
-      <approved>Approved</approved>
+      <archived>Gearchiveerd</archived>
+      <obsolete>Verouderde</obsolete>
+      <unpublished>UnPublished</unpublished>
+      <draft>Ontwerp</draft>
+      <pending>In behandeling</pending>
+      <approved>Goedgekeurd</approved>
       <inreview>In Review</inreview>
-      <staged>Staged</staged>
-      <published>Published</published>
-      <live>Published</live>
+      <staged>Geënsceneerd</staged>
+      <published>Gepubliceerd</published>
+      <live>Gepubliceerd</live>
     </publicationStates>
-    <view>View</view>
-    <edit>Edit</edit>
-    <download>Download</download>
+    <view>Tonen</view>
+    <edit>Bewerken</edit>
+    <download>Downloaden</download>
   </SocialIntegration>
   <UIPopupWindow>
     <title>
-      <DocViewer>Preview</DocViewer>
+      <DocViewer>Voorbeeld</DocViewer>
       <UIReadOnlyFileConfirmMessage>Open Document</UIReadOnlyFileConfirmMessage>
     </title>
   </UIPopupWindow>
   <ElementSet>
     <dialog>
       <label>       
-        <resourceType>Resource Type</resourceType>        
+        <resourceType>Resourcetype</resourceType>        
       </label>
     </dialog>
   </ElementSet>
   <UIPreviewCommentArea>
     <label>
-      <commentTextAreaPreview>Add your comment...</commentTextAreaPreview>
-      <no-comment-yet>No comment yet</no-comment-yet>
+      <commentTextAreaPreview>Voeg uw reactie...</commentTextAreaPreview>
+      <no-comment-yet>Geen commentaar nog</no-comment-yet>
     </label>
   </UIPreviewCommentArea>
 
@@ -113,7 +113,7 @@
 
   <UIPopupMenu>
     <msg>
-      <lock-node-read-only>This file is locked by user {0}. Open read only?</lock-node-read-only>
+      <lock-node-read-only>Dit bestand is vergrendeld door gebruiker {0}. Alleen open lezen?</lock-node-read-only>
     </msg>
   </UIPopupMenu>
 </bundle>
