--- a/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_nl.properties
+++ b/integ-ecms/integ-ecms-social/src/main/resources/locale/extension/notification/ECMSNotification_nl.properties
@@ -1,5 +1,5 @@
 #############################################################################
 #ECMSNotification #
 #############################################################################
-FileActivityChildPlugin.label.FileSize=File Size
-FileActivityChildPlugin.label.WatchTheVideo=Watch the video
+FileActivityChildPlugin.label.FileSize=bestandsgrootte
+FileActivityChildPlugin.label.WatchTheVideo=Bekijk de video
