--- a/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_nl.properties
+++ b/integ-forum/integ-forum-social/src/main/resources/locale/forum/integration/integration_nl.properties
@@ -1,42 +1,42 @@
-ForumUIActivity.label.add-post={0} has added a new post: {1}
-ForumUIActivity.label.update-post={0} has updated a post: {1}
-ForumUIActivity.label.add-topic={0} has posted a new topic: {1}
-ForumUIActivity.label.update-topic={0} has updated a topic: {1}
-ForumUIActivity.label.reply=Reply
-ForumUIActivity.label.lastReply=View latest reply
-ForumUIActivity.label.submit=Submit
-ForumUIActivity.label.view=View
-ForumUIActivity.label.noReply=No reply
-ForumUIActivity.label.oneReply={0} reply
-ForumUIActivity.label.replies={0} replies
-ForumUIActivity.msg.reply-success=you have replied to the post: {0}
-ForumUIActivity.msg.reply-empty=Title or message is empty.
-ForumUIActivity.forum.update-topic-title=Title has been updated to: {0}
-ForumUIActivity.forum.update-topic-content=Content has been edited.
-ForumUIActivity.forum.update-topic-rate=Rated the topic: {0}
-ForumUIActivity.forum.closed-topic=Topic has been closed.
-ForumUIActivity.forum.opened-topic=Topic has been opened.
-ForumUIActivity.forum.locked-topic=Topic has been locked.
-ForumUIActivity.forum.unlocked-topic=Topic has been unlocked.
-ForumUIActivity.forum.approved-topic=Topic has been approved.
-ForumUIActivity.forum.unapproved-topic=Topic has been unapproved.
-ForumUIActivity.forum.move-topic=Topic have been moved to: {0}>{1}
-ForumUIActivity.forum.update-post=Edited his reply to: {0}
-ForumUIActivity.forum.add-poll=A poll has been added to the topic.
-ForumUIActivity.forum.update-poll=Poll has been updated.
-ForumUIActivity.forum.close-poll=Poll has been closed.
-ForumUIActivity.forum.remove-poll=Poll has been removed.
+ForumUIActivity.label.add-post={0} een nieuwe post heeft toegevoegd: {1}
+ForumUIActivity.label.update-post={0} heeft een post bijgewerkt: {1}
+ForumUIActivity.label.add-topic={0} heeft gepost een nieuw onderwerp: {1}
+ForumUIActivity.label.update-topic={0} een onderwerp heeft bijgewerkt: {1}
+ForumUIActivity.label.reply=Beantwoorden
+ForumUIActivity.label.lastReply=Weergave laatste reactie
+ForumUIActivity.label.submit=Thread verzenden
+ForumUIActivity.label.view=Tonen
+ForumUIActivity.label.noReply=Geen antwoord
+ForumUIActivity.label.oneReply=antwoord {0}
+ForumUIActivity.label.replies={0} antwoorden
+ForumUIActivity.msg.reply-success=u heeft geantwoord op de post: {0}
+ForumUIActivity.msg.reply-empty=Titel of bericht is leeg.
+ForumUIActivity.forum.update-topic-title=Titel is vernieuwd naar: {0}
+ForumUIActivity.forum.update-topic-content=Inhoud is bewerkt.
+ForumUIActivity.forum.update-topic-rate=Gewaardeerd het onderwerp: {0}
+ForumUIActivity.forum.closed-topic=Onderwerp is gesloten.
+ForumUIActivity.forum.opened-topic=Onderwerp is geopend.
+ForumUIActivity.forum.locked-topic=Onderwerp is geblokkeerd.
+ForumUIActivity.forum.unlocked-topic=Onderwerp is ontgrendeld.
+ForumUIActivity.forum.approved-topic=Onderwerp is goedgekeurd.
+ForumUIActivity.forum.unapproved-topic=Onderwerp is niet goedgekeurd.
+ForumUIActivity.forum.move-topic=Onderwerp zijn verplaatst naar: {0} >{1}
+ForumUIActivity.forum.update-post=Bewerkt zijn antwoord op: {0}
+ForumUIActivity.forum.add-poll=Een poll is toegevoegd aan het onderwerp.
+ForumUIActivity.forum.update-poll=Poll is bijgewerkt.
+ForumUIActivity.forum.close-poll=Poll is gesloten.
+ForumUIActivity.forum.remove-poll=Poll is verwijderd.
 
-PollUIActivity.label.update_poll=Poll has been updated.
-PollUIActivity.label.vote={0} vote
-PollUIActivity.label.votes={0} votes
-PollUIActivity.label.voter={0} voter
-PollUIActivity.label.voters={0} voters
-PollUIActivity.action.vote=Vote
+PollUIActivity.label.update_poll=Poll is bijgewerkt.
+PollUIActivity.label.vote={0} stem
+PollUIActivity.label.votes=stemmen {0}
+PollUIActivity.label.voter={0} stemmen
+PollUIActivity.label.voters={0} kiezers
+PollUIActivity.action.vote=Stem voor document
 
-ActivityRating.title.rank5=Good
-ActivityRating.title.rank4=Above average
-ActivityRating.title.rank3=Average
-ActivityRating.title.rank2=Below average
-ActivityRating.title.rank1=Poor
-ActivityRating.title.NotRateYet=no value yet
+ActivityRating.title.rank5=Best/klik om te stemmen
+ActivityRating.title.rank4=Uitstekend/klik om te stemmen
+ActivityRating.title.rank3=Heel goed/klik om te stemmen
+ActivityRating.title.rank2=Goed/klik om te stemmen
+ActivityRating.title.rank1=Normaal/klik om te stemmen
+ActivityRating.title.NotRateYet=geen waarde nog
