--- a/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_nl.properties
+++ b/integ-search-portlet/src/main/resources/locale/portlet/quicksearch/quicksearch_nl.properties
@@ -1,12 +1,12 @@
-quicksearch.label=Quick Search Settings
-quicksearch.resultsPerType.label=Results per Type:
-quicksearch.searchIn.label=Search In:
-quicksearch.everything.label=All
-quicksearch.currentsite.label=Search in current site only:
-quicksearch.saveSettings.label=Save Settings
-quicksearch.seeAll.label=See All Search Results
-quicksearch.noResults.label=No result for
-quicksearch.input.label=Search:
-quicksearch.alert.saveSetting=Your setting has been saved.
-quicksearch.alert.error.saveSetting=Problem occurred when saving your setting:
-quicksearch.searching.label=searching..
+quicksearch.label=Snel zoeken-instellingen
+quicksearch.resultsPerType.label=Resultaten per Type:
+quicksearch.searchIn.label=Zoek in:
+quicksearch.everything.label=Alle
+quicksearch.currentsite.label=Zoeken in de huidige site alleen:
+quicksearch.saveSettings.label=Instellingen opslaan
+quicksearch.seeAll.label=Zie alle zoekresultaten
+quicksearch.noResults.label=Geen resultaten voor
+quicksearch.input.label=Zoeken:
+quicksearch.alert.saveSetting=Uw instelling heeft gered.
+quicksearch.alert.error.saveSetting=Probleem is opgetreden bij het opslaan van uw instelling:
+quicksearch.searching.label=zoeken..
