--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ca.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_ca.properties
@@ -5,6 +5,6 @@ quicksearch.type.Pages=P\u00E0gines
 quicksearch.type.Discussions=Discussions
 quicksearch.type.People=Contactes
 quicksearch.type.Spaces=Espais
-quicksearch.type.Events=Events
+quicksearch.type.Events=Esdeveniments
 quicksearch.type.Tasks=Tasques
 quicksearch.type.Answers=Respostes
