--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ca.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_ca.properties
@@ -5,7 +5,7 @@ SearchAdmin.type.Pages=P\u00E0gines
 SearchAdmin.type.Discussions=Discussions
 SearchAdmin.type.People=Contactes
 SearchAdmin.type.Spaces=Espais
-SearchAdmin.type.Events=Events
+SearchAdmin.type.Events=Esdeveniments
 SearchAdmin.type.Tasks=Tasques
 SearchAdmin.type.Answers=Respostes
 
@@ -14,11 +14,11 @@ SearchAdmin.action.Disable=Inhabilita
 
 SearchAdmin.type.Files.description=Fitxers
 SearchAdmin.type.Documents.description=eXo ECMS documents
-SearchAdmin.type.Wiki.description=eXo Wiki Pages
-SearchAdmin.type.Pages.description=eXo Portal Pages
-SearchAdmin.type.Discussions.description=eXo Forum Posts
-SearchAdmin.type.People.description=eXo Social People
-SearchAdmin.type.Spaces.description=eXo Social Spaces
-SearchAdmin.type.Events.description=eXo Calendar Events
-SearchAdmin.type.Tasks.description=eXo Calendar Tasks
-SearchAdmin.type.Answers.description=eXo Answers answers
+SearchAdmin.type.Wiki.description=eXo Wiki P\u00E0gines
+SearchAdmin.type.Pages.description=eXo Portal P\u00E0gines
+SearchAdmin.type.Discussions.description=eXo Forum Missatges
+SearchAdmin.type.People.description=eXo Social Persones
+SearchAdmin.type.Spaces.description=eXo Social Espais
+SearchAdmin.type.Events.description=eXo Calendar Esdeveniments
+SearchAdmin.type.Tasks.description=eXo Calendar Tasques
+SearchAdmin.type.Answers.description=eXo Preguntes i Respostes
