--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_es_ES.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_es_ES.properties
@@ -2,10 +2,10 @@ SearchAdmin.type.Files=Archivos
 SearchAdmin.type.Documents=Documentos
 SearchAdmin.type.Wiki=Wikis
 SearchAdmin.type.Pages=P\u00E1ginas
-SearchAdmin.type.Discussions=Discussions
+SearchAdmin.type.Discussions=Debates
 SearchAdmin.type.People=Contactos
 SearchAdmin.type.Spaces=Espacios
-SearchAdmin.type.Events=Events
+SearchAdmin.type.Events=Eventos
 SearchAdmin.type.Tasks=Tareas
 SearchAdmin.type.Answers=Respuestas
 
@@ -13,12 +13,12 @@ SearchAdmin.action.Enable=permite
 SearchAdmin.action.Disable=Desactivar
 
 SearchAdmin.type.Files.description=Archivos
-SearchAdmin.type.Documents.description=eXo ECMS documents
-SearchAdmin.type.Wiki.description=eXo Wiki Pages
-SearchAdmin.type.Pages.description=eXo Portal Pages
-SearchAdmin.type.Discussions.description=eXo Forum Posts
-SearchAdmin.type.People.description=eXo Social People
-SearchAdmin.type.Spaces.description=eXo Social Spaces
-SearchAdmin.type.Events.description=eXo Calendar Events
-SearchAdmin.type.Tasks.description=eXo Calendar Tasks
-SearchAdmin.type.Answers.description=eXo Answers answers
+SearchAdmin.type.Documents.description=eXo ECMS documentos
+SearchAdmin.type.Wiki.description=eXo Wiki P\u00E1ginas
+SearchAdmin.type.Pages.description=eXo Portal P\u00E1ginas
+SearchAdmin.type.Discussions.description=eXo Forum Publicaciones
+SearchAdmin.type.People.description=eXo Social Personas
+SearchAdmin.type.Spaces.description=eXo Social Espacios
+SearchAdmin.type.Events.description=eXo Calendar Eventos
+SearchAdmin.type.Tasks.description=eXo Calendar Tareas
+SearchAdmin.type.Answers.description=eXo Questions y Answers
