--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_fr.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_fr.properties
@@ -13,12 +13,12 @@ SearchAdmin.action.Enable=Activer
 SearchAdmin.action.Disable=D\u00E9sactiver
 
 SearchAdmin.type.Files.description=Fichiers
-SearchAdmin.type.Documents.description=eXo ECMS documents
-SearchAdmin.type.Wiki.description=eXo Wiki Pages
-SearchAdmin.type.Pages.description=eXo Portal Pages
-SearchAdmin.type.Discussions.description=eXo Forum Posts
-SearchAdmin.type.People.description=eXo Social People
-SearchAdmin.type.Spaces.description=eXo Social Spaces
-SearchAdmin.type.Events.description=eXo Calendar Events
-SearchAdmin.type.Tasks.description=eXo Calendar Tasks
-SearchAdmin.type.Answers.description=eXo Answers answers
+SearchAdmin.type.Documents.description=Documents dans eXo
+SearchAdmin.type.Wiki.description=Pages du  wiki eXo
+SearchAdmin.type.Pages.description=Pages de site eXo
+SearchAdmin.type.Discussions.description=Discussions du forum eXo
+SearchAdmin.type.People.description=Personnes de l'annuaire eXo
+SearchAdmin.type.Spaces.description=Espaces collaboratifs eXo
+SearchAdmin.type.Events.description=Ev\u00E9nements du calendrier eXo
+SearchAdmin.type.Tasks.description=T\u00E2ches du calendrier eXo
+SearchAdmin.type.Answers.description=Questions et R\u00E9ponses eXo
