--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_nl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_nl.properties
@@ -1,24 +1,24 @@
-SearchAdmin.type.Files=Files
-SearchAdmin.type.Documents=Documents
+SearchAdmin.type.Files=Bestanden
+SearchAdmin.type.Documents=Documenten
 SearchAdmin.type.Wiki=Wikis
-SearchAdmin.type.Pages=Pages
-SearchAdmin.type.Discussions=Discussions
-SearchAdmin.type.People=People
-SearchAdmin.type.Spaces=Spaces
-SearchAdmin.type.Events=Events
-SearchAdmin.type.Tasks=Tasks
-SearchAdmin.type.Answers=Answers
+SearchAdmin.type.Pages=Pagina's
+SearchAdmin.type.Discussions=Discussies
+SearchAdmin.type.People=Mensen
+SearchAdmin.type.Spaces=Ruimtes
+SearchAdmin.type.Events=Gebeurtenissen
+SearchAdmin.type.Tasks=Taken
+SearchAdmin.type.Answers=Antwoorden
 
-SearchAdmin.action.Enable=Enable
-SearchAdmin.action.Disable=Disable
+SearchAdmin.action.Enable=Inschakelen
+SearchAdmin.action.Disable=Uitschakelen
 
-SearchAdmin.type.Files.description=Files
-SearchAdmin.type.Documents.description=eXo ECMS documents
-SearchAdmin.type.Wiki.description=eXo Wiki Pages
-SearchAdmin.type.Pages.description=eXo Portal Pages
+SearchAdmin.type.Files.description=bestand(en) toegevoegd
+SearchAdmin.type.Documents.description=eXo ECMS documenten
+SearchAdmin.type.Wiki.description=eXo Wiki-pagina 's
+SearchAdmin.type.Pages.description=eXo Portal-pagina 's
 SearchAdmin.type.Discussions.description=eXo Forum Posts
-SearchAdmin.type.People.description=eXo Social People
-SearchAdmin.type.Spaces.description=eXo Social Spaces
-SearchAdmin.type.Events.description=eXo Calendar Events
-SearchAdmin.type.Tasks.description=eXo Calendar Tasks
-SearchAdmin.type.Answers.description=eXo Answers answers
+SearchAdmin.type.People.description=eXo sociale mensen
+SearchAdmin.type.Spaces.description=eXo sociale ruimtes
+SearchAdmin.type.Events.description=eXo gebeurtenissen van de kalender
+SearchAdmin.type.Tasks.description=eXo kalender taken
+SearchAdmin.type.Answers.description=eXo Questions and Answers
