--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_nl.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_nl.properties
@@ -1,11 +1,11 @@
-unifiedSearch.label.Results=Results {0} to {1} for {2}
-unifiedSearch.type.Files=Files
-unifiedSearch.type.Documents=Documents
+unifiedSearch.label.Results=Resultaten {0} te {1} voor {2}
+unifiedSearch.type.Files=bestand(en) toegevoegd
+unifiedSearch.type.Documents=Documenten
 unifiedSearch.type.Wiki=Wikis
-unifiedSearch.type.Pages=Pages
-unifiedSearch.type.Discussions=Discussions
-unifiedSearch.type.People=People
-unifiedSearch.type.Spaces=Spaces
-unifiedSearch.type.Events=Events
-unifiedSearch.type.Tasks=Tasks
-unifiedSearch.type.Answers=Answers
+unifiedSearch.type.Pages=Pagina's
+unifiedSearch.type.Discussions=Discussies
+unifiedSearch.type.People=Mensen
+unifiedSearch.type.Spaces=Ruimtes
+unifiedSearch.type.Events=Gebeurtenissen
+unifiedSearch.type.Tasks=Taken
+unifiedSearch.type.Answers=Antwoorden
