--- a/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
+++ b/integ-social/integ-social-ecms/src/main/resources/locale/social/plugin/doc/UIDocumentComposerPlugin_nl.properties
@@ -15,16 +15,16 @@
 # along with this program; if not, see<http://www.gnu.org/licenses/>.
 #
 
-UIActivityComposer.label.UIDocActivityComposer=File
-UIComposerDocumentExtension.label.Select_File=Select File
-UIComposerDocumentExtension.label.Download=Download
-UIComposerDocumentExtension.label.View_File=View
-UIComposerDocumentExtension.label.Version=Version
-UIPopupWindow.title.UIOneNodePathSelector=File Selector
-UIPopupComposer.title.UIDocActivitySelector=Select File
-UIDocActivitySelector.msg.not-a-file=The file does not exist or an error occurred with the selected file.
-UIComposer.msg.error.Must_select_file=You have to select file first.
+UIActivityComposer.label.UIDocActivityComposer=Bestand
+UIComposerDocumentExtension.label.Select_File=Bestand selecteren
+UIComposerDocumentExtension.label.Download=Downloaden
+UIComposerDocumentExtension.label.View_File=Tonen
+UIComposerDocumentExtension.label.Version=Versie
+UIPopupWindow.title.UIOneNodePathSelector=Bestand Selector
+UIPopupComposer.title.UIDocActivitySelector=Bestand selecteren
+UIDocActivitySelector.msg.not-a-file=Het bestand bestaat niet of er is een fout opgetreden met het geselecteerde bestand.
+UIComposer.msg.error.Must_select_file=U moet het bestand eerst selecteren.
 UIDocActivitySelector.label.cancel=#{word.cancel}
-UIDocActivitySelector.label.selectedfile=Select
-UIDSUploadInput.label.Upload=Upload
-UIDocActivity.msg.noPermission=You don't have the rights to View/Download this document.
+UIDocActivitySelector.label.selectedfile=Selecteren
+UIDSUploadInput.label.Upload=Uploaden
+UIDocActivity.msg.noPermission=U hebt niet de rechten te bekijken/downloaden van dit document.
