--- a/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_nl.properties
+++ b/integ-wiki/integ-wiki-social/src/main/resources/locale/wiki/integration/integration_nl.properties
@@ -1,7 +1,7 @@
-WikiUIActivity.label.page-create={0} has created Wiki page: {1}
-WikiUIActivity.label.page-update={0} has edited Wiki page: {1}
-WikiUIActivity.label.view-change=View Changes
-WikiUIActivity.label.version=Version: 
-WikiUIActivity.msg.update-page-title=Page's title has been updated to: {0}
-WikiUIActivity.msg.update-page-content=Page's content has been edited.
-WikiUIActivity.msg.move-page=Page has been moved to: {0}
+WikiUIActivity.label.page-create={0} Wiki-pagina heeft gemaakt: {1}
+WikiUIActivity.label.page-update={0} heeft bewerkt wikipagina: {1}
+WikiUIActivity.label.view-change=Wijzigingen bekijken
+WikiUIActivity.label.version=Versie:\u00A0
+WikiUIActivity.msg.update-page-title=De titel van pagina is vernieuwd naar: {0}
+WikiUIActivity.msg.update-page-content=De pagina-inhoud is bewerkt.
+WikiUIActivity.msg.move-page=Pagina is verhuisd naar: {0}
