INTEG-432, TA-341, COMMONS-442: [Unified Search] Conflict of Tasks in Calendar and Tasks add-on
Fix description:
* Restore displayName of Calendar's task connector
* Add new i18n keys for task connector in Tasks add-on

--- a/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_en.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/quicksearch/quicksearch_en.properties
@@ -8,3 +8,4 @@ quicksearch.type.Spaces=Spaces
 quicksearch.type.Events=Events
 quicksearch.type.Tasks=Tasks
 quicksearch.type.Answers=Answers
+quicksearch.type.TasksAddon=Tasks
