--- a/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/unifiedsearch/unifiedsearch_en.properties
@@ -9,3 +9,4 @@ unifiedSearch.type.Spaces=Spaces
 unifiedSearch.type.Events=Events
 unifiedSearch.type.Tasks=Tasks
 unifiedSearch.type.Answers=Answers
+unifiedSearch.type.TasksAddon=Tasks
