--- a/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_en.properties
+++ b/integ-search-service/src/main/resources/locale/portlet/searchadministration/searchadministration_en.properties
@@ -8,6 +8,7 @@ SearchAdmin.type.Spaces=Spaces
 SearchAdmin.type.Events=Events
 SearchAdmin.type.Tasks=Tasks
 SearchAdmin.type.Answers=Answers
+SearchAdmin.type.TasksAddon=Tasks
 
 SearchAdmin.action.Enable=Enable
 SearchAdmin.action.Disable=Disable
@@ -22,3 +23,4 @@ SearchAdmin.type.Spaces.description=eXo Social Spaces
 SearchAdmin.type.Events.description=eXo Calendar Events
 SearchAdmin.type.Tasks.description=eXo Calendar Tasks
 SearchAdmin.type.Answers.description=eXo Questions and Answers
+SearchAdmin.type.TasksAddon.description=eXo Tasks tasks
